# growser.com

./: README.md  checklist.md  index.html  package-lock.json  package.json  plan.md  vite.config.ts
public/pages/: newtab.html
src/: App.tsx  index.html  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/permissions/autogenerated/: close_webview.toml  create_child_webview.toml  hide_webview.toml  navigate_webview.toml  report_page_title.toml  set_webview_position.toml  set_webview_size.toml  show_webview.toml
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: Sidebar.tsx  TabBar.tsx  Toolbar.tsx
src/css/: shell.css
src/js/: db.js  ipc.js  main.js  navigation.js  tabs.js  types.d.ts
src/lib/: db.ts  ipc.ts  navigation.ts  settings.ts  tabs.ts
src/pages/: newtab.html
